Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.x
-
Fix Version/s: 6.3.0 Beta1, 6.4.0 Beta1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Platform/s:
-
Commits:cb27ed30f7 (qt/qtbase/dev) c6e23c19d0 (qt/qtbase/6.2) c6e23c19d0 (qt/tqtc-qtbase/6.2) cb27ed30f7 (qt/tqtc-qtbase/dev) 9741fbd31e (qt/qtbase/6.3)
Description
The following CSS does not work with Qt 6, but works with Qt 5 on a QToolButton where popupMode is set to MenuButtonPopup.
CSS:
QToolButton[popupMode="1"] {
padding-right: 20px;
}
According to https://doc.qt.io/qt-6/qtoolbutton.html - QToolButton::MenuButtonPopup is 1.
The UI file shows the property is QToolButton::MenuButtonPopup for "popupMode".
This is what the button looks like:
Qt 6:
Qt 5: