src/gui/text/qcssparser_p.h
@@ -557,11 +557,10 @@ struct AttributeSelector
         MatchEndsWith,
         MatchContains
     };
-    inline AttributeSelector() : valueMatchCriterium(NoMatch) {}
 
     QString name;
     QString value;
-    ValueMatchType valueMatchCriterium;
+    ValueMatchType valueMatchCriterium = NoMatch;
 };
 QT_CSS_DECLARE_TYPEINFO(AttributeSelector, Q_RELOCATABLE_TYPE)
 
@@ -666,7 +665,10 @@ public:
     QList<Declaration> declarationsForNode(NodePtr node, const char *extraPseudo = nullptr);
 
     virtual bool nodeNameEquals(NodePtr node, const QString& nodeName) const;
-    virtual QString attribute(NodePtr node, const QString &name) const = 0;
+    // ### TODO keep until QtSvg is updated with new qtbase and has overridden attributeValue
+    virtual QString attribute(NodePtr, const QString &) const { return QString(); }
+    virtual QString attributeValue(NodePtr node, const QCss::AttributeSelector &aSelector) const
+    { return attribute(node, aSelector.name); }
     virtual bool hasAttributes(NodePtr node) const = 0;
     virtual QStringList nodeIds(NodePtr node) const;
     virtual QStringList nodeNames(NodePtr node) const = 0;
